force-app/main/default/objects/Inbound_Content__c/fields/Marketing_Collateral_Video_Countdown__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Collateral_Video_Countdown__c</fullName>
    <formula>IF(RecordTypeId=&apos;0124A000001UU1i&apos;,
IF(
AND(Account__r.Auto_Approval_Not_Applicable__c = FALSE, NOT(ISBLANK(	Marketing_Video_Auto_Approval_Date__c))),
IF(
(DATETIMEVALUE(	Marketing_Video_Auto_Approval_Date__c) - NOW()) &gt; -0.70 ,
TEXT( FLOOR( (DATETIMEVALUE(TEXT(Marketing_Video_Auto_Approval_Date__c)
+
&quot; &quot; +
&apos;17:00:00&apos;) - NOW())) ) &amp; &quot; days &quot;
&amp; TEXT( FLOOR( MOD((DATETIMEVALUE(TEXT(Marketing_Video_Auto_Approval_Date__c)
+
&quot; &quot; +
&apos;17:00:00&apos;) - NOW()) * 24, 24 ) )) &amp; &quot; hours &quot;
&amp; TEXT( ROUND( MOD( (DATETIMEVALUE(TEXT(Marketing_Video_Auto_Approval_Date__c)
+
&quot; &quot; +
&apos;17:00:00&apos;) - NOW()) * 24 * 60, 60 ), 0 ) ) &amp; &quot; minutes&quot;,
TEXT(Status__c)
),
IF(Account__r.Auto_Approval_Not_Applicable__c = TRUE,
&quot;No Auto-Approval Process&quot;,
&quot; &quot; ))
,&quot;0&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marketing Collateral Video Countdown</label>
    <type>Text</type>
</CustomField>