force-app/main/default/objects/Inbound_Content__c/fields/Marketing_Manager_Notes__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Manager_Notes__c</fullName>
    <description>Pulled from the account page.</description>
    <label>Marketing Manager Notes</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>