force-app/main/default/objects/Inbound_Content__c/fields/Marketing_Video_Auto_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Video_Auto_Approval_Date__c</fullName>
    <description>Marketing Collateral Video</description>
    <formula>Due_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MCV Auto Approval Date</label>
    <type>Date</type>
</CustomField>