force-app/main/default/objects/Inbound_Content__c/fields/Outbound_Asset_Manager__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Asset_Manager__c</fullName>
    <label>Outbound Asset Manager</label>
    <length>100</length>
    <type>Text</type>
</CustomField>