force-app/main/default/objects/Inbound_Content__c/fields/Outbound_Asset_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Asset_Manager_Email__c</fullName>
    <label>Outbound Asset Manager Email</label>
    <type>Email</type>
</CustomField>