force-app/main/default/objects/Inbound_Content__c/fields/Outbound_Asset_Manager_Phone__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Asset_Manager_Phone__c</fullName>
    <label>Outbound Asset Manager Phone</label>
    <type>Phone</type>
</CustomField>