force-app/main/default/objects/Inbound_Content__c/fields/Overall_Score__c.field-meta.xml
<CustomField>
    <fullName>Overall_Score__c</fullName>
    <label>Overall Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>