force-app/main/default/objects/Inbound_Content__c/fields/Page_Blog_Title__c.field-meta.xml
<CustomField>
    <fullName>Page_Blog_Title__c</fullName>
    <label>Page/Blog Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>