force-app/main/default/objects/Inbound_Content__c/fields/PAM_Email__c.field-meta.xml
<CustomField>
    <fullName>PAM_Email__c</fullName>
    <label>PAM Email</label>
    <type>Email</type>
</CustomField>