force-app/main/default/objects/Inbound_Content__c/fields/PM_Design_QA_Feedback__c.field-meta.xml
<CustomField>
    <fullName>PM_Design_QA_Feedback__c</fullName>
    <label>PM Design QA Feedback RTF</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>