force-app/main/default/objects/Inbound_Content__c/fields/Producer__c.field-meta.xml
<CustomField>
    <fullName>Producer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Producer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Creative_Content1</relationshipName>
    <type>Lookup</type>
</CustomField>