force-app/main/default/objects/Inbound_Content__c/fields/Production_Month__c.field-meta.xml
<CustomField>
    <fullName>Production_Month__c</fullName>
    <label>Production Month</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Month 1</fullName>
            </value>
            <value>
                <fullName>Month 2</fullName>
            </value>
            <value>
                <fullName>Month 3</fullName>
            </value>
            <value>
                <fullName>Month 4</fullName>
            </value>
            <value>
                <fullName>Month 5</fullName>
            </value>
            <value>
                <fullName>Month 6</fullName>
            </value>
            <value>
                <fullName>Month 7</fullName>
            </value>
            <value>
                <fullName>Month 8</fullName>
            </value>
            <value>
                <fullName>Month 9</fullName>
            </value>
            <value>
                <fullName>Month 10</fullName>
            </value>
            <value>
                <fullName>Month 11</fullName>
            </value>
            <value>
                <fullName>Month 12</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>