force-app/main/default/objects/Inbound_Content__c/fields/Project_s_Notes__c.field-meta.xml
<CustomField>
    <fullName>Project_s_Notes__c</fullName>
    <description>Used to pull notes from the associated project field Project Notes</description>
    <label>Project&apos;s Notes</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>