force-app/main/default/objects/Inbound_Content__c/fields/Published_Link__c.field-meta.xml
<CustomField>
    <fullName>Published_Link__c</fullName>
    <label>Published Link</label>
    <type>Url</type>
</CustomField>