force-app/main/default/objects/Inbound_Content__c/fields/Quality_Check_Link__c.field-meta.xml
<CustomField>
    <fullName>Quality_Check_Link__c</fullName>
    <defaultValue>&quot;https://www.surveygizmo.com/s3/5729807/AMG-Internal-PM-QA-Proofing-Checks&quot;</defaultValue>
    <label>Quality Check Link</label>
    <type>Url</type>
</CustomField>