force-app/main/default/objects/Inbound_Content__c/fields/Ready_to_Send_to_Client__c.field-meta.xml
<CustomField>
    <fullName>Ready_to_Send_to_Client__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ready to Send to Client</label>
    <type>Checkbox</type>
</CustomField>