force-app/main/default/objects/Inbound_Content__c/fields/Resources__c.field-meta.xml
<CustomField>
    <fullName>Resources__c</fullName>
    <label>Resources</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>