force-app/main/default/objects/Inbound_Content__c/fields/Revisions_Required__c.field-meta.xml
<CustomField>
    <fullName>Revisions_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Did this piece require revisions after being sent to the client?</description>
    <inlineHelpText>Did this piece require revisions after being sent to the client?</inlineHelpText>
    <label>Revisions Required?</label>
    <type>Checkbox</type>
</CustomField>