force-app/main/default/objects/Inbound_Content__c/fields/Scoring_Link__c.field-meta.xml
<CustomField>
    <fullName>Scoring_Link__c</fullName>
    <formula>Surveygizmo_Link__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scoring Link</label>
    <type>Text</type>
</CustomField>