force-app/main/default/objects/Inbound_Content__c/fields/SEMRush_Score__c.field-meta.xml
<CustomField>
    <fullName>SEMRush_Score__c</fullName>
    <label>SEMRush Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>