force-app/main/default/objects/Inbound_Content__c/fields/SEO_Type__c.field-meta.xml
<CustomField>
    <fullName>SEO_Type__c</fullName>
    <label>SEO Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call-to-Action</fullName>
            </value>
            <value>
                <fullName>Image Alt Tags</fullName>
            </value>
            <value>
                <fullName>Internal Linking</fullName>
            </value>
            <value>
                <fullName>Meta Refreshes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>