force-app/main/default/objects/Inbound_Content__c/fields/Social_Media_Manager__c.field-meta.xml
<CustomField>
    <fullName>Social_Media_Manager__c</fullName>
    <label>Social Media Manager</label>
    <type>Email</type>
</CustomField>