force-app/main/default/objects/Inbound_Content__c/fields/Star_Rating_Value__c.field-meta.xml
<CustomField>
    <fullName>Star_Rating_Value__c</fullName>
    <label>Star Rating Value</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>