force-app/main/default/objects/Inbound_Content__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>Researching</fullName>
            </value>
            <value>
                <fullName>Creative Brief</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Ready for Content</fullName>
            </value>
            <value>
                <fullName>Writing Content</fullName>
            </value>
            <value>
                <fullName>Internal Editing</fullName>
            </value>
            <value>
                <fullName>Script QA Edits</fullName>
            </value>
            <value>
                <fullName>Video Team Review</fullName>
            </value>
            <value>
                <fullName>Project Manager QA</fullName>
            </value>
            <value>
                <fullName>QA Edits</fullName>
            </value>
            <value>
                <fullName>Waiting on Client Review</fullName>
            </value>
            <value>
                <fullName>Client Script Revisions</fullName>
            </value>
            <value>
                <fullName>Copy Approval</fullName>
            </value>
            <value>
                <fullName>Script Approved</fullName>
            </value>
            <value>
                <fullName>Co-Op Approved</fullName>
            </value>
            <value>
                <fullName>Storyboard Creation</fullName>
            </value>
            <value>
                <fullName>Ready for Voiceover</fullName>
            </value>
            <value>
                <fullName>Voiceover Recorded</fullName>
            </value>
            <value>
                <fullName>Ready for Overlay Design</fullName>
            </value>
            <value>
                <fullName>Production</fullName>
            </value>
            <value>
                <fullName>Internal Video Proofing</fullName>
            </value>
            <value>
                <fullName>Video Edits</fullName>
            </value>
            <value>
                <fullName>Video PM Final QA</fullName>
            </value>
            <value>
                <fullName>Waiting on Client Video Review</fullName>
            </value>
            <value>
                <fullName>Client Video Revisions</fullName>
            </value>
            <value>
                <fullName>Video Approved</fullName>
            </value>
            <value>
                <fullName>Ready to Optimize</fullName>
            </value>
            <value>
                <fullName>Optimized and Ready to Publish</fullName>
            </value>
            <value>
                <fullName>Ready for Design</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>