force-app/main/default/objects/Inbound_Content__c/fields/Strategy_Notes__c.field-meta.xml
<CustomField>
    <fullName>Strategy_Notes__c</fullName>
    <label>Strategy Notes</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>