force-app/main/default/objects/Inbound_Content__c/fields/Strategy_Workbook_Link__c.field-meta.xml
<CustomField>
    <fullName>Strategy_Workbook_Link__c</fullName>
    <description>Pulls from the related account page</description>
    <formula>Account__r.Strategy_Workbook_Link__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Strategy Workbook Link</label>
    <type>Text</type>
</CustomField>