force-app/main/default/objects/Inbound_Content__c/fields/Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Date__c</fullName>
    <description>Date the client last submitted my content survey.</description>
    <label>Submitted Date</label>
    <type>Date</type>
</CustomField>