force-app/main/default/objects/Inbound_Content__c/fields/Submitted_to_Client_Date__c.field-meta.xml
<CustomField>
    <fullName>Submitted_to_Client_Date__c</fullName>
    <label>Submitted to Client Date</label>
    <type>DateTime</type>
</CustomField>