force-app/main/default/objects/Inbound_Content__c/fields/Suggested_Word_Count__c.field-meta.xml
<CustomField>
    <fullName>Suggested_Word_Count__c</fullName>
    <label>Suggested Word Count</label>
    <length>9</length>
    <type>Text</type>
</CustomField>