force-app/main/default/objects/Inbound_Content__c/fields/Survey_Closed_On_Date__c.field-meta.xml
<CustomField>
    <fullName>Survey_Closed_On_Date__c</fullName>
    <formula>Due_Date__c + 7</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Survey Closed On Date</label>
    <type>Date</type>
</CustomField>