force-app/main/default/objects/Inbound_Content__c/fields/Surveygizmo_Link__c.field-meta.xml
<CustomField>
    <fullName>Surveygizmo_Link__c</fullName>
    <label>Surveygizmo Link</label>
    <type>Url</type>
</CustomField>