force-app/main/default/objects/Inbound_Content__c/fields/Tags_if_blog__c.field-meta.xml
<CustomField>
    <fullName>Tags_if_blog__c</fullName>
    <label>Tags (if blog)</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>