force-app/main/default/objects/Inbound_Content__c/fields/Topic_Score__c.field-meta.xml
<CustomField>
    <fullName>Topic_Score__c</fullName>
    <description>This will be pushed from Surveygizmo for Star Score</description>
    <label>Topic Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>