force-app/main/default/objects/Inbound_Content__c/fields/User_Is_On_Project__c.field-meta.xml
<CustomField>
    <fullName>User_Is_On_Project__c</fullName>
    <formula>IF( OR($User.Id = Content_Writer__c ,$User.Id = Editor__c ,$User.Id = Designer__c ,$User.Id =  Account__r.Copywriter__c ,$User.Id = Account__r.Owner.Id ),True,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Is On Project</label>
    <type>Checkbox</type>
</CustomField>