force-app/main/default/objects/Inbound_Content__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>Used to provide increased information to better inform the team when creating inbound content.</description>
    <inlineHelpText>Always keep in mind the value of similar blogs &amp; pages when planning a topic. If the values are too similar then our content runs the risk of duplicating content and self-cannibalization.
Answer to the question “why would someone read this blog/page?
What information, insight, or industry knowledge are we providing in this topic to support our goal?</inlineHelpText>
    <label>Value</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>