force-app/main/default/objects/Inbound_Content__c/fields/Video_Link_First_Draft__c.field-meta.xml
<CustomField>
    <fullName>Video_Link_First_Draft__c</fullName>
    <label>Video Link - First Draft</label>
    <type>Url</type>
</CustomField>