force-app/main/default/objects/Inbound_Content__c/fields/Video_Producer_Email__c.field-meta.xml
<CustomField>
    <fullName>Video_Producer_Email__c</fullName>
    <label>Video Producer Email</label>
    <type>Email</type>
</CustomField>