force-app/main/default/objects/Inbound_Content__c/fields/Video_Proofer__c.field-meta.xml
<CustomField>
    <fullName>Video_Proofer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to track the user responsible for a creative content video project and send email notifications.</description>
    <label>Video Proofer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Creative_Content3</relationshipName>
    <type>Lookup</type>
</CustomField>