force-app/main/default/objects/Inbound_Content__c/fields/Video_Score__c.field-meta.xml
<CustomField>
    <fullName>Video_Score__c</fullName>
    <label>Video Score</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>