force-app/main/default/objects/Inbound_Content__c/fields/Video_Script_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Video_Script_Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Video Script Reviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Creative_Content2</relationshipName>
    <type>Lookup</type>
</CustomField>