force-app/main/default/objects/Inbound_Content__c/fields/Virtual_Marketing_Manager__c.field-meta.xml
<CustomField>
    <fullName>Virtual_Marketing_Manager__c</fullName>
    <label>Digital Success Manager</label>
    <type>Email</type>
</CustomField>