force-app/main/default/objects/Inbound_Content__c/fields/VMM_Email__c.field-meta.xml
<CustomField>
    <fullName>VMM_Email__c</fullName>
    <formula>Account__r.Owner.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DSM Email</label>
    <type>Text</type>
</CustomField>