force-app/main/default/objects/Inbound_Content__c/fields/Voiceover_Type__c.field-meta.xml
<CustomField>
    <fullName>Voiceover_Type__c</fullName>
    <label>Voiceover Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Female</fullName>
            </value>
            <value>
                <fullName>No Preference</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>