force-app/main/default/objects/Inbound_Content__c/fields/What_page_CTA_s_do_we_need_to_adjust__c.field-meta.xml
<CustomField>
    <fullName>What_page_CTA_s_do_we_need_to_adjust__c</fullName>
    <label>What page CTA’s do we need to adjust?</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>