force-app/main/default/objects/Inbound_Content__c/fields/What_page_images_do_we_need_to_target__c.field-meta.xml
<CustomField>
    <fullName>What_page_images_do_we_need_to_target__c</fullName>
    <description>used for SEO Type</description>
    <label>What page images do we need to target?</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>