force-app/main/default/objects/Inbound_Content__c/fields/What_pages_do_we_need_to_focus_on__c.field-meta.xml
<CustomField>
    <fullName>What_pages_do_we_need_to_focus_on__c</fullName>
    <description>used with SEO Type</description>
    <label>What pages do we need to focus on?</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>