force-app/main/default/objects/Inbound_Content__c/fields/What_pages_do_we_need_to_refresh__c.field-meta.xml
<CustomField>
    <fullName>What_pages_do_we_need_to_refresh__c</fullName>
    <description>Used for SEO Type</description>
    <label>What pages do we need to refresh?</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>