force-app/main/default/objects/Inbound_Content__c/fields/Word_Count__c.field-meta.xml
<CustomField>
    <fullName>Word_Count__c</fullName>
    <description>manually entered by content writer to identify the number of words written.</description>
    <label>Word Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>