force-app/main/default/objects/Inbound_Content__c/fields/X1_Referring_URL_Link__c.field-meta.xml
<CustomField>
    <fullName>X1_Referring_URL_Link__c</fullName>
    <label>1 - Referring URL Link</label>
    <type>Url</type>
</CustomField>