force-app/main/default/objects/Inbound_Content__c/fields/X2_Referring_URL_Anchor_Text__c.field-meta.xml
<CustomField>
    <fullName>X2_Referring_URL_Anchor_Text__c</fullName>
    <label>2 - Referring URL Anchor Text</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>