force-app/main/default/objects/Inbound_Content__c/fields/X2_Referring_URL_Link__c.field-meta.xml
<CustomField>
    <fullName>X2_Referring_URL_Link__c</fullName>
    <label>2 - Referring URL Link</label>
    <type>Url</type>
</CustomField>