force-app/main/default/objects/Inbound_Content__c/fields/X2_Referring_URL_Sentence_to_Target__c.field-meta.xml
<CustomField>
    <fullName>X2_Referring_URL_Sentence_to_Target__c</fullName>
    <label>2 - Referring URL Sentence to Target</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>