force-app/main/default/objects/Inbound_Content__c/fields/Youtube_Link__c.field-meta.xml
<CustomField>
    <fullName>Youtube_Link__c</fullName>
    <description>Used on Marketing Video record type. Linking the video on our internal YouTube Playlist for examples</description>
    <label>Youtube Link</label>
    <type>Url</type>
</CustomField>