force-app/main/default/objects/Inbound_Content__c/recordTypes/Abstrakt_Content.recordType-meta.xml
<RecordType>
    <fullName>Abstrakt_Content</fullName>
    <active>true</active>
    <description>Used for internal marketing content</description>
    <label>Abstrakt Content</label>
</RecordType>