force-app/main/default/objects/Inbound_Content__c/recordTypes/Abstrakt_Video.recordType-meta.xml
<RecordType>
    <fullName>Abstrakt_Video</fullName>
    <active>true</active>
    <description>Used to track Abstrakt video projects.</description>
    <label>Abstrakt Video</label>
</RecordType>