force-app/main/default/objects/Inbound_Content__c/recordTypes/Auto_Video.recordType-meta.xml
<RecordType>
    <fullName>Auto_Video</fullName>
    <active>true</active>
    <description>Used for marketing collateral automotive video projects.</description>
    <label>Auto Video</label>
</RecordType>