force-app/main/default/objects/Inbound_Content__c/recordTypes/Creative_Calendar.recordType-meta.xml
<RecordType>
    <fullName>Creative_Calendar</fullName>
    <active>true</active>
    <description>Used for Social Media</description>
    <label>Creative Calendar</label>
</RecordType>