force-app/main/default/objects/Inbound_Content__c/recordTypes/Custom_Video.recordType-meta.xml
<RecordType>
    <fullName>Custom_Video</fullName>
    <active>true</active>
    <description>Used for marketing collateral custom video projects.</description>
    <label>Custom Video</label>
</RecordType>