force-app/main/default/objects/Inbound_Content__c/recordTypes/Inbound_Content.recordType-meta.xml
<RecordType>
    <fullName>Inbound_Content</fullName>
    <active>true</active>
    <description>Used for Inbound content including blogs and website content</description>
    <label>Inbound Content</label>
</RecordType>