force-app/main/default/objects/Inbound_Content__c/recordTypes/Marketing_Collateral.recordType-meta.xml
<RecordType>
    <fullName>Marketing_Collateral</fullName>
    <active>true</active>
    <description>Used for standard Outbound Marketing Collateral.</description>
    <label>Marketing Collateral</label>
</RecordType>