force-app/main/default/objects/Inbound_Content__c/recordTypes/Ongoing_SEO_Content.recordType-meta.xml
<RecordType>
    <fullName>Ongoing_SEO_Content</fullName>
    <active>false</active>
    <label>Ongoing SEO Content</label>
</RecordType>