force-app/main/default/objects/Inbound_Content__c/recordTypes/SEO_Items.recordType-meta.xml
<RecordType>
    <fullName>SEO_Items</fullName>
    <active>true</active>
    <label>SEO Items</label>
</RecordType>