force-app/main/default/objects/Inbound_Content__c/validationRules/Client_Cannot_Mark_Status_as_Published.validationRule-meta.xml
<ValidationRule>
    <fullName>Client_Cannot_Mark_Status_as_Published</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED( Status__c), ISPICKVAL(Status__c, &apos;Published&apos;),  OR($User.ProfileId = &apos;00eG0000000GfP9&apos;,
$User.ProfileId = &apos;00e4A000000i4IS&apos;,
$User.ProfileId = &apos;00e4A000000i4IN&apos;,
$User.ProfileId = &apos;00e4w000000Go0R&apos;,
$User.ProfileId = &apos;00e4w000000Go0W&apos;,
$User.ProfileId = &apos;00e4w000000Go0M&apos;
)
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>You do not have permission to mark the status as &quot;Published&quot;. For more information on when this will be published, reach out to your Account Manager.</errorMessage>
</ValidationRule>