force-app/main/default/objects/Inbound_Content__c/validationRules/If_Auto_Approved_Cant_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>If_Auto_Approved_Cant_Change</fullName>
    <active>false</active>
    <errorConditionFormula>AND(ISPICKVAL(PRIORVALUE(Status__c),&apos;AUTO-APPROVED&apos;),ISCHANGED(Status__c))</errorConditionFormula>
    <errorMessage>Can&apos;t Change Approval after Auto-Approved</errorMessage>
</ValidationRule>