force-app/main/default/objects/Inbound_Content__c/validationRules/Need_Feedback_if_Denied.validationRule-meta.xml
<ValidationRule>
    <fullName>Need_Feedback_if_Denied</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL(Status__c , &quot;Client Denied&quot;), ISBLANK( Feedback__c ) )</errorConditionFormula>
    <errorMessage>Must provide feedback if content is denied</errorMessage>
</ValidationRule>